--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "GymPass style app.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,9 @@
     "prisma": "5.1.1",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vitest": "0.34.2",
+    "vitest-tsconfig-paths": "3.4.1"
   },
   "dependencies": {
     "@prisma/client": "5.1.1",
