--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.5.1",
+    "@vitest/coverage-v8": "0.34.2",
     "eslint": "8.47.0",
     "prisma": "5.1.1",
     "tsup": "7.2.0",
