--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node build/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.5.1",
     "@vitest/coverage-v8": "0.34.2",
+    "@vitest/ui": "0.34.2",
     "eslint": "8.47.0",
     "prisma": "5.1.1",
     "tsup": "7.2.0",
