--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "5.1.1",
     "@types/bcryptjs": "2.4.2",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.9",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
     "zod": "3.22.2"
