--- a/.env
+++ b/.env
@@ -7,4 +7,9 @@ NODE_ENV=dev
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+
+# Auth
+JWT_SECRET=gymapp2023
+
+# Database
 DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
