--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vitest-tsconfig-paths": "3.4.1"
   },
   "dependencies": {
+    "@fastify/jwt": "7.2.0",
     "@prisma/client": "5.1.1",
     "@types/bcryptjs": "2.4.2",
     "bcryptjs": "2.4.3",
