--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
+    "test:create-prisma-enviroment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-enviroment": "npm link vitest-environment-prisma",
     "start": "node build/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-enviroment test:install-prisma-enviroment",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -21,6 +25,7 @@
     "@vitest/coverage-v8": "0.34.2",
     "@vitest/ui": "0.34.2",
     "eslint": "8.47.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.1.1",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
