--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-enviroment test:install-prisma-enviroment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -22,11 +23,13 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.5.1",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-v8": "0.34.2",
     "@vitest/ui": "0.34.2",
     "eslint": "8.47.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.1.1",
+    "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
