--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vitest-tsconfig-paths": "3.4.1"
   },
   "dependencies": {
+    "@fastify/cookie": "9.0.4",
     "@fastify/jwt": "7.2.0",
     "@prisma/client": "5.1.1",
     "@types/bcryptjs": "2.4.2",
